chore: fix allocation policy