@@ -9,32 +9,41 @@ import org.springframework.stereotype.Component;
 
 import java.util.Collections;
 import java.util.List;
+import com.dsip.backend.entity.DsipPartition;
+import com.dsip.backend.util.FinancialCalculator;
 
 @Component
 @RequiredArgsConstructor
 public class PartitionAllocationPolicy {
 
     private final DsipProperties dsipProperties;
+    private final FinancialCalculator financialCalculator;
 
     public PartitionPlan createFirstPlan(DsipTracker tracker) {
         return createPlan(tracker, 1, Collections.emptyList());
     }
 
-    public PartitionPlan createPlan(DsipTracker tracker, int nextPartitionIndex, List<Integer> pastPartitionLengths) {
-        int expectedLengthDays = resolveExpectedLength(tracker.getPartitionDays(), pastPartitionLengths);
-        int totalPartitions = computeTotalPartitions(tracker);
-        int phaseIndex = computePhaseIndex(nextPartitionIndex, totalPartitions);
-        double phaseWeight = resolvePhaseWeight(tracker.getDeploymentStyle(), phaseIndex);
-        int allocatedCapital = computeAllocatedCapital(tracker, totalPartitions, phaseWeight);
+    public PartitionPlan createPlan(DsipTracker tracker, int nextPartitionIndex, List<DsipPartition> pastPartitions) {
 
-        return new PartitionPlan(nextPartitionIndex, expectedLengthDays, phaseIndex, allocatedCapital);
+        double phaseWeight = resolvePhaseWeight(tracker, pastPartitions);
+        int totalPartitions = computeTotalPartitions(tracker, pastPartitions);
+        int allocatedCapital = computeAllocatedCapital(tracker, totalPartitions, phaseWeight);
+        int expectedPartitionDays = resolveExpectedLength(tracker.getPartitionDays(), pastPartitions);
+
+        return new PartitionPlan(nextPartitionIndex, expectedPartitionDays, allocatedCapital);
+
     }
 
-    private int resolveExpectedLength(int defaultPartitionDays, List<Integer> pastPartitionLengths) {
-        if (pastPartitionLengths == null || pastPartitionLengths.isEmpty()) {
+    private int resolveExpectedLength(int defaultPartitionDays, List<DsipPartition> pastPartitions) {
+        if (pastPartitions == null || pastPartitions.isEmpty()) {
             return defaultPartitionDays;
         }
-        List<Integer> sorted = pastPartitionLengths.stream().sorted().toList();
+        List<Integer> sorted = pastPartitions.stream()
+                .map(p -> financialCalculator.calculateDaysBetween(p.getCreatedAt(),
+                        p.getPartitionEndDate()))
+                .filter(d -> d > 0)
+                .sorted()
+                .collect(java.util.stream.Collectors.toList());
         int size = sorted.size();
         if (size % 2 == 0) {
             return (sorted.get(size / 2 - 1) + sorted.get(size / 2)) / 2;
@@ -43,32 +52,34 @@ public class PartitionAllocationPolicy {
         }
     }
 
-    private int computeTotalPartitions(DsipTracker tracker) {
-        int tradingDaysPerYear = dsipProperties.getTradingDaysPerYear();
-        double totalTradingDays = tracker.getConvictionPeriodYears() * tradingDaysPerYear;
-        return Math.max(1, (int) Math.round(totalTradingDays / tracker.getPartitionDays()));
+    private int computeTotalPartitions(DsipTracker tracker, List<DsipPartition> pastPartitions) {
+        double capitalRemaining = tracker.getTotalCapitalPlanned() - tracker.getTotalCapitalInvestedSoFar();
+        double medianBurned = tracker.getTotalCapitalInvestedSoFar() / pastPartitions.size();
+        return (int) Math.floor(capitalRemaining / medianBurned) + pastPartitions.size();
     }
 
-    private int computePhaseIndex(int partitionIndex, int totalPartitions) {
-        int phaseCount = dsipProperties.getPhaseCount();
-        int partitionsPerPhase = Math.max(1, totalPartitions / phaseCount);
-        int phaseIndex = (partitionIndex - 1) / partitionsPerPhase;
-        return Math.min(phaseIndex, phaseCount - 1);
-    }
-
-    private double resolvePhaseWeight(Integer deploymentStyleValue, int phaseIndex) {
-        DeploymentStyle style = DeploymentStyle.fromValue(deploymentStyleValue);
+    private double resolvePhaseWeight(DsipTracker tracker, List<DsipPartition> pastPartitions) {
+        DeploymentStyle style = DeploymentStyle.fromValue(tracker.getDeploymentStyle());
         List<Double> weights = dsipProperties.getLoadFactor().getByKey(style.getKey());
-        if (weights == null || weights.isEmpty()) {
-            return 1.0;
+
+        double medianBurned = tracker.getTotalCapitalInvestedSoFar() / pastPartitions.size();
+        double capitalRemaining = tracker.getTotalCapitalPlanned() - tracker.getTotalCapitalInvestedSoFar();
+        double deployedPercentage = 100 * tracker.getTotalCapitalInvestedSoFar() / tracker.getTotalCapitalPlanned();
+
+        boolean hasAmountForPhase1 = (weights.get(0)) * capitalRemaining >= medianBurned;
+        boolean hasAmountForPhase2 = (weights.get(1) + weights.get(0)) * capitalRemaining >= medianBurned;
+
+        if (deployedPercentage < weights.get(0) && hasAmountForPhase1) {
+            return weights.get(0);
+        } else if (deployedPercentage < (weights.get(1) + weights.get(0)) && hasAmountForPhase2) {
+            return weights.get(1);
+        } else {
+            return weights.get(2);
         }
-        if (phaseIndex >= weights.size()) {
-            return weights.get(weights.size() - 1);
-        }
-        return weights.get(phaseIndex);
     }
 
     private int computeAllocatedCapital(DsipTracker tracker, int totalPartitions, double phaseWeight) {
+
         int partitionsPerPhase = Math.max(1, totalPartitions / dsipProperties.getPhaseCount());
         return (int) Math.round((double) tracker.getTotalCapitalPlanned() * phaseWeight / partitionsPerPhase);
     }
